# learn-jax

./: 01 Just-In-Time Compilation.ipynb  02 Automatic Vectorization.ipynb  03 Automatic Differentiation.ipynb  04 Debugging.ipynb  05 Pytrees.ipynb  06 Distributed Computing.ipynb  07 Stateful Computation.ipynb  08 JIT Control Flow and Logic.ipynb  README.md  pyproject.toml
